--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,19 @@ python:
   - 3.5
   - 3.6
 
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
-
 install:
+  - if [ "${TRAVIS_INSTALL_PYTHON_VERSION}" = "2.7" ]; then
+      pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp27-cp27mu-linux_x86_64.whl;
+    elif [ "${TRAVIS_INSTALL_PYTHON_VERSION}" = "3.5" ]; then
+      pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp35-cp35m-linux_x86_64.whl;
+    elif [ "${TRAVIS_INSTALL_PYTHON_VERSION}" == "3.6" ]; then
+      pip3 install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl;
+    else
+      echo -e "Forgot to update pytorch install for ${TRAVIS_INSTALL_PYTHON_VERSION}";
+      exit 1;
+    fi
   - pip install -U pip setuptools setuptools_scm
   - pip install -r requirements.txt
 
 script:
-  - python setup.py test
+  - python setup.py test --addopts="-m cpu"
