--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: python
 
 python:
   - 2.7
-  - 3.5
-  - 3.6
+  # - 3.5
+  # - 3.6
 
 install:
   - pip install -U pip setuptools setuptools_scm
   - pip install -r requirements.txt
+  - pip install scipy pytest
 
 script:
   - python setup.py test --addopts="-m cpu"
