--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
+cache: pip
 
 python:
   - 2.7
-  # - 3.5
-  # - 3.6
+  - 3.5
+  - 3.6
 
 install:
   - pip install -U pip setuptools setuptools_scm
