--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 cache: pip
+dist: xenial
 
 python:
   - 2.7
   - 3.5
   - 3.6
+  - 3.7
 
 install:
   - pip install -U pip setuptools setuptools_scm
