Travis CI build fixes and updates (#1)
* Working on fixing travis build for 2.7

* Trying scipy from pypi for 2.7

* Attempting pip cache

* Adding 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,17 @@
 language: python
+cache: pip
+dist: xenial
 
 python:
   - 2.7
   - 3.5
   - 3.6
+  - 3.7
 
 install:
-  - if [ "${TRAVIS_PYTHON_VERSION}" = "2.7" ]; then
-      pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp27-cp27mu-linux_x86_64.whl;
-    elif [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then
-      pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp35-cp35m-linux_x86_64.whl;
-    elif [ "${TRAVIS_PYTHON_VERSION}" == "3.6" ]; then
-      pip3 install http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl;
-    else
-      echo -e "Forgot to update pytorch install for ${TRAVIS_PYTHON_VERSION}";
-      exit 1;
-    fi
   - pip install -U pip setuptools setuptools_scm
   - pip install -r requirements.txt
+  - pip install scipy pytest
 
 script:
   - python setup.py test --addopts="-m cpu"
