Cleaning up conda recipe in prep for next release

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,11 @@ source:
 build:
   noarch: python
   entry_points:
+    - ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
     - get-torch-spect-data-dir-info = pydrobert.torch.command_line:get_torch_spect_data_dir_info
+    - torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
+    - torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
+    - trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
 
 requirements:
   build:
@@ -50,7 +54,9 @@ test:
   imports:
     - pydrobert
     - pydrobert.torch
+    - pydrobert.torch.command_line
     - pydrobert.torch.data
+    - pydrobert.torch.estimators
     - pydrobert.torch.training
     - pydrobert.torch.util
   commands:
