Updated TrainingStateParams for interface in pydrobert.param.optuna

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 install:
   - pip install -U pip setuptools setuptools_scm
   - pip install -r requirements.txt
-  - pip install scipy pytest optuna
+  - pip install scipy pytest pydrobert-param optuna
 
 script:
   - python setup.py test --addopts="-m cpu -x"
