--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,39 @@
-[bdist_wheel]
-universal=1
-
-[aliases]
-test=pytest
-
 [metadata]
+name = pydrobert-pytorch
+description = "PyTorch utilities for ML, specifically speech"
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = Apache-2.0
 license_file = LICENSE
+url = https://github.com/sdrobert/pydrobert-pytorch
+project_urls =
+  Documentation = https://pydrobert-pytorch.readthedocs.io
+author = Sean Robertson
+author_email = sdrobert@cs.toronto.edu
+classifiers =
+  Development Status :: 3 - Alpha
+  License :: OSI Approved :: Apache Software License
+  Programming Language :: Python :: 3
+
+[options]
+zip_safe = False
+packages = find_namespace:
+package_dir =
+  = src
+python_requires = >= 3.6
+install_requires =
+  numpy
+  torch>=1.0.1
+  param
+
+[options.entry_points]
+console_scripts =
+  compute-torch-token-data-dir-error-rates = pydrobert.torch.command_line:compute_torch_token_data_dir_error_rates
+  ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
+  get-torch-spect-data-dir-info = pydrobert.torch.command_line:get_torch_spect_data_dir_info
+  torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
+  torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
+  trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
+
+[options.packages.find]
+where = src
