--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,7 +53,7 @@ test:
     - pytest.ini
   requires:
     - pytest
-    - cudatoolkit
+    - pytorch * *cuda*
   imports:
     - pydrobert
     - pydrobert.torch
