--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,14 +15,18 @@ for:
   -
     matrix:
       only:
-        - TOXENV: /py3[7-8]/
+        - TOXENV: /py37/
     skip_non_tags: true
 
+init:
+  - cmd: set PATH=C:\Python37-x64;C:\Python37-x64\Scripts;%PATH%
+
 install:
-  - C:\Python37-x64\python -m pip install tox tox-ltt
+  - python -m pip install -U virtualenv setuptools wheel six
+  - python -m pip install -U tox tox-ltt
 
 test_script:
-  - C:\Python37-x64\python -m tox
+  - python -m tox
 
 branches:
   except:
