--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ init:
   - cmd: set PATH=C:\Python37-x64;C:\Python37-x64\Scripts;%PATH%
 
 install:
-  - python -m pip install -U virtualenv setuptools wheel six
+  - python -m pip install -U pip virtualenv setuptools wheel six
   - python -m pip install -U tox tox-ltt
 
 test_script:
