--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ init:
 
 install:
   - python -m pip install -U pip virtualenv setuptools wheel six
-  - python -m pip install -U tox tox-ltt
+  - python -m pip install -U tox tox-appveyor
 
 test_script:
   - python -m tox
