--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,8 +23,8 @@ for:
 build: off
 
 install:
-  - python3.7 -m pip install -U pip virtualenv setuptools wheel six
-  - python3.7 -m pip install -U tox tox-ltt
+  - python -m pip install -U pip virtualenv setuptools wheel six
+  - python -m pip install -U tox tox-ltt
 
 test_script:
-  - python3.7 -m tox
+  - python -m tox
