--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,7 @@ build: off
 
 install:
   - python -m pip install -U pip virtualenv setuptools wheel six
-  - python -m pip install -U tox tox-ltt
+  - python -m pip install -U tox
 
 test_script:
   - python -m tox
