Getting minimum pytorch version working.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36-earliest
+envlist = py3{6-earliest,7,8,9}
 isolated_build = True
 requires =
     tox-ltt
@@ -12,7 +12,7 @@ requires =
 [testenv]
 deps =
     pytest
-    earliest: torch==1.2.0
+    earliest: torch==1.5.1
     !earliest: torch
 commands =
     compute-torch-token-data-dir-error-rates --help
