Compatibility fixes + setup changes (#58)
* Appveyor py310 and skip middling

* Try this

* Please

* Mucking around with tox and versions

* blech

* Now?

* Why do you hate me?

* Is it you?

* Hmmm

* Mebbeh?

* Weirdness

* Do it mah dude

* Blerg?

* More blerg

* Please

* Hmm?

* Getting minimum pytorch version working.

* Updated CHANGELOG + formatting

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,16 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36,py37,py38,py39
+envlist = py3{6-earliest,7,8,9}
+isolated_build = True
+requires =
+    tox-ltt
 
 [testenv]
 deps =
     pytest
+    earliest: torch==1.5.1
+    !earliest: torch
 commands =
     compute-torch-token-data-dir-error-rates --help
     ctm-to-torch-token-data-dir --help
@@ -16,4 +21,4 @@ commands =
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    pytest
+    pytest --basetemp="{envtmpdir}" {posargs}
