--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 markers =
   cpu : tests are on the cpu
   gpu : tests are on the gpu
+  trace : tests involve tracing code (TorchScript)
+  script : tests involve scripting code (TorchScript)
