--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py3{6-earliest,7,8,9}
+envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
     tox-ltt
@@ -12,8 +12,9 @@ requires =
 [testenv]
 deps =
     pytest
-    earliest: torch==1.5.1
-    !earliest: torch
+    t151: torch==1.5.1
+    t181: torch==1.8.1
+    !t151-!t181: torch
 commands =
     compute-torch-token-data-dir-error-rates --help
     ctm-to-torch-token-data-dir --help
