--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,8 @@ environment:
       PYTHON: "3.7"
     - TOXENV: py38
       PYTHON: "3.8"
+    - TOXENV: py38-151
+      PYTHON: "3.8"
     - TOXENV: py39
       PYTHON: "3.9"
     # - TOXENV: py310  # wheel not available yet
