--- a/tox.ini
+++ b/tox.ini
@@ -22,4 +22,4 @@ commands =
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    pytest --basetemp="{envtmpdir}" {posargs} -x
+    pytest --basetemp="{envtmpdir}" {posargs}
