Function wrappers and JIT compatibility for most of the package (#59)
* Added script decorators to many of the util funcs

* HardOptimalCompletionLoss trace test

* MinimumErrorRateLoss tracing, tests

* Made attention layers scriptable, at least

* SpecAugment tracing, tests

* RandomShift tracing, tests

* _string_matching changes

* Fixes

* Maybe this works?

* compat

* ctc_prefix_search script_if_tracing

* Refactored + made jit decisions more centralized

* Eeeo

* Removed del statements in scripted modules

* Bug fix for sequential_log_probs

* Added SequentialLogProbabilities module

* Try this

* Suppress some test warnings

* Fixed attention trace

* Now?

* broadcast_shapes compatibility

* Compatibility stuff

* A little more compatibility stuff

* scripting SequentialLanguageModel

* Avoid LookupLanguageModel scripting on 1.5.1

* What's happening now?

* Skip scripting tests for 1.5.1

* Test fixes

* Bug fixes and debugging 1.5.1

* Keep try

* What now?

* Pluz

* ctc prefix search, mayhaps

* beam

* Oops

* Ugh

* Again, with feeling

* Ok!

* Avoid unnecessary recursion

* DenseImageWarp

* PolyharmonicSpline

* SparseImageWarp

* String matching

* PadVariable

* Warp1DGrid

* TimeDistributedReturn

* Bug fixes for CUDA and changelog

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,11 +5,15 @@ image: Ubuntu
 
 environment:
   matrix:
-    - TOXENV: py36-earliest
+    - TOXENV: py36-t151
       PYTHON: "3.6"
-    - TOXENV: py37
+    - TOXENV: py36-t181
+      PYTHON: "3.6"
+    - TOXENV: py37-t181
       PYTHON: "3.7"
     - TOXENV: py38
+      PYTHON: "3.8"
+    - TOXENV: py38-151
       PYTHON: "3.8"
     - TOXENV: py39
       PYTHON: "3.9"
