--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ requires =
     tox-ltt
 
 [testenv]
+setenv =
+    PYTORCH_JIT = 0
 deps =
     pytest
     t151: torch==1.5.1
@@ -22,4 +24,4 @@ commands =
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    PYTORCH_JIT=0 pytest --basetemp="{envtmpdir}" {posargs} tests/test_string.py -k optimal -x
+    pytest --basetemp="{envtmpdir}" {posargs} tests/test_string.py -k optimal -x
