--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ requires =
     tox-ltt
 
 [testenv]
-setenv =
-    PYTORCH_JIT = 0
+; setenv =
+;     PYTORCH_JIT = 0
 deps =
     pytest
     t151: torch==1.5.1
