--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@
 [tox]
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
-requires =
-    tox-ltt
+; requires =
+;     tox-ltt
 
 [testenv]
 deps =
