--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@
 [tox]
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
-; requires =
-;     tox-ltt
+requires =
+    tox-ltt
 
 [testenv]
 deps =
@@ -22,4 +22,4 @@ commands =
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    pytest --basetemp="{envtmpdir}" {posargs}
+    pytest --basetemp="{envtmpdir}" {posargs} tests/test_string.py -k optimal -x
