--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ requires =
     tox-ltt
 
 [testenv]
-setenv =
-    t151: PYTORCH_JIT = 0
+passenv =
+    TORCH_JIT
 deps =
     pytest
     t151: torch==1.5.1
