--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,8 +7,7 @@ environment:
   matrix:
     - TOXENV: py36-t151
       PYTHON: "3.6"
-      # PYTEST_ARGS: -m not trace and not script
-      TORCH_JIT: "0"
+      NO_SCRIPT: "1"
     - TOXENV: py36-t181
       PYTHON: "3.6"
     - TOXENV: py37-t181
@@ -17,8 +16,8 @@ environment:
       PYTHON: "3.8"
     - TOXENV: py38-151
       PYTHON: "3.8"
-      # PYTEST_ARGS: -m "not trace and not script"
-      TORCH_JIT: "0"
+      PYTEST_ARGS: "-m not trace and not script"
+      NO_SCRIPT: "1"
     - TOXENV: py39
       PYTHON: "3.9"
     # - TOXENV: py310  # wheel not available yet
@@ -45,4 +44,9 @@ install:
   - python3 -m pip install -U tox tox-ltt
 
 test_script:
-  - python3 -m tox -- $PYTEST_ARGS
+  - >-
+    if [ ! -z "$NO_SCRIPT" ]; then
+      export JIT_SCRIPT=0
+      PYTEST_ARGS=( '-m' 'not trace and not script' )
+    fi
+  - python3 -m tox -- "${PYTEST_ARGS[@]}"
