--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,18 +10,15 @@ environment:
       NO_SCRIPT: "1"
     - TOXENV: py36-t181
       PYTHON: "3.6"
-    - TOXENV: py37-t181
+      ONLY_SCRIPT: "1"
+    - TOXENV: py37
       PYTHON: "3.7"
     - TOXENV: py38
       PYTHON: "3.8"
-    - TOXENV: py38-151
-      PYTHON: "3.8"
-      PYTEST_ARGS: "-m not trace and not script"
-      NO_SCRIPT: "1"
     - TOXENV: py39
       PYTHON: "3.9"
-    # - TOXENV: py310  # wheel not available yet
-    #   PYTHON: "3.10"
+    - TOXENV: py310
+      PYTHON: "3.10"
 
 stack: python %PYTHON%
 
@@ -35,6 +32,7 @@ for:
       only:
         - PYTHON: "3.7"
         - PYTHON: "3.8"
+        - PYTHON: "3.9"
     skip_non_tags: true
 
 build: off
@@ -48,5 +46,7 @@ test_script:
     if [ ! -z "$NO_SCRIPT" ]; then
       export PYTORCH_JIT=0
       PYTEST_ARGS=( '-m' 'not trace and not script' )
+    elif [ ! -z "$ONLY_SCRIPT" ]; then
+      PYTEST_ARGS=( '-m' 'script or trace' )
     fi
   - python3 -m tox -- "${PYTEST_ARGS[@]}"
