No but do it tho

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,8 +17,8 @@ environment:
       PYTHON: "3.8"
     - TOXENV: py39
       PYTHON: "3.9"
-    - TOXENV: py310
-      PYTHON: "3.10"
+    # - TOXENV: py310  # wheel not available
+    #   PYTHON: "3.10"
 
 stack: python %PYTHON%
 
@@ -32,7 +32,6 @@ for:
       only:
         - PYTHON: "3.7"
         - PYTHON: "3.8"
-        - PYTHON: "3.9"
     skip_non_tags: true
 
 build: off
