--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,17 +7,17 @@ environment:
   matrix:
     - TOXENV: py36-t151
       PYTHON: "3.6"
+      NO_SCRIPT: "1"
     - TOXENV: py36-t181
       PYTHON: "3.6"
-    - TOXENV: py37-t181
+      ONLY_SCRIPT: "1"
+    - TOXENV: py37
       PYTHON: "3.7"
     - TOXENV: py38
       PYTHON: "3.8"
-    - TOXENV: py38-151
-      PYTHON: "3.8"
     - TOXENV: py39
       PYTHON: "3.9"
-    # - TOXENV: py310  # wheel not available yet
+    # - TOXENV: py310  # wheel not available
     #   PYTHON: "3.10"
 
 stack: python %PYTHON%
@@ -41,4 +41,11 @@ install:
   - python3 -m pip install -U tox tox-ltt
 
 test_script:
-  - python3 -m tox
+  - >-
+    if [ ! -z "$NO_SCRIPT" ]; then
+      export PYTORCH_JIT=0
+      PYTEST_ARGS=( '-m' 'not trace and not script' )
+    elif [ ! -z "$ONLY_SCRIPT" ]; then
+      PYTEST_ARGS=( '-m' 'script or trace' )
+    fi
+  - python3 -m tox -- "${PYTEST_ARGS[@]}"
