--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,7 +44,7 @@ test_script:
   - >-
     if [ ! -z "$NO_SCRIPT" ]; then
       export PYTORCH_JIT=0
-      PYTEST_ARGS=( '-m' 'not trace and not script' '-sv' )
+      PYTEST_ARGS=( '-m' 'not trace and not script' '-svx' )
     elif [ ! -z "$ONLY_SCRIPT" ]; then
       PYTEST_ARGS=( '-m' 'script or trace' )
     fi
