--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,11 +2,11 @@
 version: 2
 
 build:
+  os: ubuntu-20.04
   tools:
     python: "3.9"
 
 sphinx:
-  builder: html
   configuration: docs/conf.py
 
 python:
