Fix USE_JIT, test

--- a/tox.ini
+++ b/tox.ini
@@ -24,4 +24,5 @@ commands =
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
+    !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     pytest --basetemp="{envtmpdir}" {posargs}
