--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
-    tox-ltt <= 0.4.0
+    tox-ltt
+    light-the-torch < 0.4.0
 
 [testenv]
 passenv =
