--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
-    tox-ltt
-    light-the-torch < 0.4.0
+    # https://github.com/pmeier/tox-ltt/issues/17
+    tox-ltt < 0.4.2
 
 [testenv]
 passenv =
