--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,10 @@
 [tox]
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
-requires =
-    # https://github.com/pmeier/tox-ltt/issues/17
-    tox-ltt < 0.4.2
+requires = tox-ltt < 0.4.2
 
 [testenv]
-passenv =
-    PYTORCH_JIT
+passenv = PYTORCH_JIT
 deps =
     pytest
     t151: torch==1.5.1
