--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@
 [tox]
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
-requires = tox-ltt < 0.4.2
+requires =
+    light-the-torch
+    tox-ltt < 0.4.2
 
 [testenv]
 passenv = PYTORCH_JIT
