--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,12 @@
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
-    light-the-torch
-    tox-ltt < 0.4.2
+    tox-ltt
+    light-the-torch<0.4.0
 
 [testenv]
-passenv = PYTORCH_JIT
+passenv =
+    PYTORCH_JIT
 deps =
     pytest
     t151: torch==1.5.1
