Just work please

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@
 [tox]
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
-requires = [ "tox-ltt", "light-the-torch < 0.4.0" ]
+requires =
+    t151-181: tox-ltt
 
 [testenv]
 passenv =
