--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
-    t151-181: tox-ltt
+    t151-t181: tox-ltt
 
 [testenv]
 passenv =
