--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py3{6-t151,7,8,9}
 isolated_build = True
 requires =
-    t151-t181: tox-ltt
+    tox-ltt
 
 [testenv]
 passenv =
@@ -26,3 +26,4 @@ commands =
     trn-to-torch-token-data-dir --help
     !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     pytest --basetemp="{envtmpdir}" {posargs}
+!t151-!t181: disable_light_the_torch = True
