--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,7 +38,7 @@ build: off
 
 install:
   - python3 -m pip install -U pip virtualenv setuptools wheel six
-  - python3 -m pip install -U tox "tox-ltt<0.4.0"
+  - python3 -m pip install -U tox tox-ltt "light-the-torch<0.4.0"
 
 test_script:
   - >-
