added torch-spect-data-dir-to-wds, test

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ passenv =
     PYTORCH_JIT
 deps =
     pytest
+    webdataset
     t151: torch==1.5.1
     t181: torch==1.8.1
     !t151-!t181: torch
