Do not rely on webdataset for sharding

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,10 +34,7 @@ console_scripts =
   torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
   torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
   trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
-  torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds [wds]
+  torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
 
 [options.packages.find]
 where = src
-
-[options.extras_require]
-wds = webdataset
