--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
   torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
   trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
   torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
+  compute-mvn-stats-for-torch-feat-data-dir = pydrobert.torch.command_line:compute_mvn_stats_for_torch_feat_data_dir
 
 [options.packages.find]
 where = src
