Forgot to add cmd check to tox

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ deps =
     !t151-!t181: torch
 commands =
     compute-torch-token-data-dir-error-rates --help
+    compute-mvn-stats-for-torch-feat-data-dir --help
     ctm-to-torch-token-data-dir --help
     get-torch-spect-data-dir-info --help
     torch-token-data-dir-to-ctm --help
