Added FeatureDeltas, test

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ passenv =
 deps =
     pytest
     webdataset
+    pydrobert-speech>=0.2.0
     t151: torch==1.5.1
     t181: torch==1.8.1
     !t151-!t181: torch
