Initial pytorch-lightning support

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     t151: torch==1.5.1
     t181: torch==1.8.1
     !t151-!t181: torch
+    git+https://github.com/sdrobert/pydrobert-param
 commands =
     compute-torch-token-data-dir-error-rates --help
     compute-mvn-stats-for-torch-feat-data-dir --help
