Exclude pytorch-lightning from old

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,10 @@ deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
-    pytorch-lightning
     t151: torch==1.5.1
     t181: torch==1.8.1
     !t151-!t181: torch
+    !t151-!t181: pytorch-lightning
     git+https://github.com/sdrobert/pydrobert-param
 commands =
     compute-torch-token-data-dir-error-rates --help
