--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,8 @@ console_scripts =
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+lightning =
+  pytorch_lightning
+  pydrobert-param[yaml]>=0.4.0
