--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     t181: torch==1.8.1
     !t151-!t181: torch
     !t151-!t181: pytorch-lightning
-    git+https://github.com/sdrobert/pydrobert-param
+    !t151-!t181: pydrobert-param>=0.4.0
 commands =
     compute-torch-token-data-dir-error-rates --help
     compute-mvn-stats-for-torch-feat-data-dir --help
