Some conservative minimum versions for lightning

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,5 +42,6 @@ where = src
 
 [options.extras_require]
 lightning =
-  pytorch_lightning
+  pytorch_lightning>=1.7
   pydrobert-param[yaml]>=0.4.0
+  torch>=1.10
