--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@
 [tox]
 envlist = py3{7-t151,8,9,10,11}
 isolated_build = True
-requires =
-    tox-ltt
+; requires =
+;     tox-ltt
 
 [testenv]
 passenv =
