Ok, windows possible?

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
-    t151: torch==1.5.1
-    t181: torch==1.8.1
+    t151: torch==1.5.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+    t181: torch==1.8.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
     !t151-!t181: torch
     !t151-!t181: pytorch-lightning
     !t151-!t181: pydrobert-param>=0.4.0
