--- a/tox.ini
+++ b/tox.ini
@@ -12,12 +12,13 @@ isolated_build = True
 [testenv]
 passenv =
     PYTORCH_JIT
+install_cmd = pip install --pre --find-links https://download.pytorch.org/whl/torch_stable.html {opts} {packages}
 deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
-    t151: torch==1.5.1+cpu @ https://download.pytorch.org/whl/torch_stable.html
-    t181: torch==1.8.1+cpu @ https://download.pytorch.org/whl/torch_stable.html
+    t151: torch==1.5.1+cpu 
+    t181: torch==1.8.1+cpu
     !t151-!t181: torch
     !t151-!t181: pytorch-lightning
     !t151-!t181: pydrobert-param>=0.4.0
