--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ isolated_build = True
 [testenv]
 passenv =
     PYTORCH_JIT
-install_cmd = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
+install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
     webdataset
