A metric ton of work from a project (#69)
* Minor fix

* Exposed enumerate_binary_sequences, test

* rename _conditional_bernoulli to _combinatorics

* Added enumerate_vocab_sequences, test

* SeqeuntialLanguageModelDistribution, tests

* Ooops

* Working, but want to change decoding routines

* Minor doc fix

* Fixed SequentialLanguageModelDistribution

* Quick docstring update

* Avoid mutating state dict directly

* Oops

* optional total_count + cast hyp to long

* Fixed interface checks, test

* is_log=True estimators return log values, tests

* Compatibility

* Avoid deprecation warning

* max_iters now call param in RandomWalk, BeamSearch

* Fix USE_JIT, test

* BucketBatchSampler, test

* Trying to fix light-the-torch issues

* ?

* Examples and still working on tox-ltt issue

* please my family

* I am an ignorant soul plz help

* Blerg

* You know nothing Jan Snaw

* ...

* ?

* I'm going insane

* Funk

* Just work please

* Oops

* Pleeeez

* Eeee

* I don't understand why you hate me

* Keep trying

* moved subsed_id; added length-based batching

* Length fix, test

* Better clamping with MC estimators

* DataParams back to SpectDataParams

* added torch-spect-data-dir-to-wds, test

* Is this the problem?

* Do not rely on webdataset for sharding

* Added MeanVarianceNormalization, test

* Script mvn's other module methods

* Added compute-mvn-stats..., test

* Forgot to add cmd check to tox

* Added FeatureDeltas, test

* removed persistent flag

* Oops

* Refactoring datasets, added transforms

* Bug fix

* Bump minimum version

* Try again

* Added PadMaskedSequence, test

* Distributed stuff

* Allow dataset separation in dataloader

* Distributed TrainingStateController

* Bug fixes

* Refactoring datasets/loaders; more options; tests

* More refactoring

* Get rid of deprected warnings

* Some refactoring of tests

* Some

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,14 @@ console_scripts =
   torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
   torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
   trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
+  torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
+  compute-mvn-stats-for-torch-feat-data-dir = pydrobert.torch.command_line:compute_mvn_stats_for_torch_feat_data_dir
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+lightning =
+  pytorch_lightning>=1.7
+  pydrobert-param[yaml]>=0.4.0
+  torch>=1.10
