--- a/tox.ini
+++ b/tox.ini
@@ -4,24 +4,31 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py3{6-t151,7,8,9}
+envlist = py3{7-t151,8,9,10}
 isolated_build = True
-requires =
-    tox-ltt
+; requires =
+;     tox-ltt
 
 [testenv]
 passenv =
     PYTORCH_JIT
+install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
+    webdataset
+    pydrobert-speech>=0.2.0
     t151: torch==1.5.1
     t181: torch==1.8.1
     !t151-!t181: torch
+    !t151-!t181: pytorch-lightning
+    !t151-!t181: pydrobert-param>=0.4.0
 commands =
     compute-torch-token-data-dir-error-rates --help
+    compute-mvn-stats-for-torch-feat-data-dir --help
     ctm-to-torch-token-data-dir --help
     get-torch-spect-data-dir-info --help
     torch-token-data-dir-to-ctm --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
+    !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     pytest --basetemp="{envtmpdir}" {posargs}
