--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,24 +1,18 @@
 version: build.{build}.branch.{branch}
-# FIXME(sdrobert): tox-ltt doesn't work on Windows as of yet, causing a
-# virtualenv error. Until it's fixed we'll use the Ubuntu image.
 image: Ubuntu
 
 environment:
   matrix:
-    - TOXENV: py36-t151
-      PYTHON: "3.6"
-      NO_SCRIPT: "1"
-    - TOXENV: py36-t181
-      PYTHON: "3.6"
-      ONLY_SCRIPT: "1"
-    - TOXENV: py37
+    - TOXENV: py37-t151
       PYTHON: "3.7"
-    - TOXENV: py38
+      NO_SCRIPT: "1"
+    - TOXENV: py38-t181
       PYTHON: "3.8"
+      ONLY_SCRIPT: "1"
     - TOXENV: py39
       PYTHON: "3.9"
-    # - TOXENV: py310  # wheel not available
-    #   PYTHON: "3.10"
+    - TOXENV: py310
+      PYTHON: "3.10"
 
 stack: python %PYTHON%
 
@@ -30,15 +24,14 @@ for:
   -
     matrix:
       only:
-        - PYTHON: "3.7"
         - PYTHON: "3.8"
+        - PYTHON: "3.9"
     skip_non_tags: true
 
 build: off
 
 install:
-  - python3 -m pip install -U pip virtualenv setuptools wheel six
-  - python3 -m pip install -U tox tox-ltt
+  - python3 -m pip install -U pip virtualenv setuptools wheel six tox
 
 test_script:
   - >-
