added read_textgrid, write_textgrid, test

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,10 @@ description = "PyTorch utilities for ML, specifically speech"
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = Apache-2.0
-license_file = LICENSE
+license_files =
+  LICENSE
+  LICENSE_pytorch.txt
+  LICENCE_nltk.txt
 url = https://github.com/sdrobert/pydrobert-pytorch
 project_urls =
   Documentation = https://pydrobert-pytorch.readthedocs.io
