torhc-token-data-dir-to-textgrids, test

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ console_scripts =
   torch-ali-data-dir-to-torch-token-data-dir = pydrobert.torch.command_line:torch_ali_data_dir_to_torch_token_data_dir
   torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
   torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
+  torch-token-data-dir-to-textgrids = pydrobert.torch.command_line:torch_token_data_dir_to_textgrids
   torch-token-data-dir-to-torch-ali-data-dir = pydrobert.torch.command_line:torch_token_data_dir_to_torch_ali_data_dir
   torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
   trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
