--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
     torch-ali-data-dir-to-torch-token-data-dir --help
     torch-spect-data-dir-to-wds --help
     torch-token-data-dir-to-ctm --help
+    torch-token-data-dir-to-textgrids --help
     torch-token-data-dir-to-torch-ali-data-dir --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
