chunk-torch-spect-data-dir, test

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
+  chunk-torch-spect-data-dir = pydrobert.torch.command_line:chunk_torch_spect_data_dir
   compute-mvn-stats-for-torch-feat-data-dir = pydrobert.torch.command_line:compute_mvn_stats_for_torch_feat_data_dir
   compute-torch-token-data-dir-error-rates = pydrobert.torch.command_line:compute_torch_token_data_dir_error_rates
   ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
