--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     !t151-!t181: pytorch-lightning
     !t151-!t181: pydrobert-param>=0.4.0
 commands =
+    chunk-torch-spect-data-dir --help
     compute-mvn-stats-for-torch-feat-data-dir --help
     compute-torch-token-data-dir-error-rates --help
     ctm-to-torch-token-data-dir --help
