--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,8 +37,8 @@ test_script:
   - >-
     if [ ! -z "$NO_SCRIPT" ]; then
       export PYTORCH_JIT=0
-      PYTEST_ARGS=( '-m' 'not trace and not script' '-vv' '--full-trace' )
+      PYTEST_ARGS=( '-m' 'not trace and not script' )
     elif [ ! -z "$ONLY_SCRIPT" ]; then
-      PYTEST_ARGS=( '-m' 'script or trace' '-vv' '--full-trace' )
+      PYTEST_ARGS=( '-m' 'script or trace' )
     fi
   - python3 -m tox -- "${PYTEST_ARGS[@]}"
