TextGrid handling and chunking of SpectDataSet (#70)
* added read_textgrid, write_textgrid, test

* Added textgrids-to-torch-token-data-dir

* torch-token-data-dir-to-torch-ali-data-dir, test

* Howsabout?

* fixed policies for extract_chunk_slices working

* extract_chunk_sizes with ali

* ref, tests

* Timeout flags + small refactor of command_line

* Changed chunking interface

* Rename and change behaviour

* Mostly docs

* Changed how read/write deals with textgrid stuff

* Test fix

* torch-ali-dir-to-torch-token-dir, test

* Oops

* Double oops

* cumsum

* Refactor command line

* Refactor?

* More refactoring

* torhc-token-data-dir-to-textgrids, test

* Move _chunk.py into _feats.py

* Added ChunkBySlices, test

* Added ChunkTokenSequencesBySlices, test

* Add retain flag

* chunk-torch-spect-data-dir, test

* Slightly change validate_spect_data_set

* Update get-torch-spect-data-dir-info w/ more keys

* Update LitDataModule to store entire info dict

* Updated changelog

* Maybe this will stop the training problem?

* Find out why the heck that's happening

* Try reducing the number of barriers

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,10 @@ description = "PyTorch utilities for ML, specifically speech"
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = Apache-2.0
-license_file = LICENSE
+license_files =
+  LICENSE
+  LICENSE_pytorch.txt
+  LICENCE_nltk.txt
 url = https://github.com/sdrobert/pydrobert-pytorch
 project_urls =
   Documentation = https://pydrobert-pytorch.readthedocs.io
@@ -28,14 +31,19 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
+  chunk-torch-spect-data-dir = pydrobert.torch.command_line:chunk_torch_spect_data_dir
+  compute-mvn-stats-for-torch-feat-data-dir = pydrobert.torch.command_line:compute_mvn_stats_for_torch_feat_data_dir
   compute-torch-token-data-dir-error-rates = pydrobert.torch.command_line:compute_torch_token_data_dir_error_rates
   ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
   get-torch-spect-data-dir-info = pydrobert.torch.command_line:get_torch_spect_data_dir_info
+  textgrids-to-torch-token-data-dir = pydrobert.torch.command_line:textgrids_to_torch_token_data_dir
+  torch-ali-data-dir-to-torch-token-data-dir = pydrobert.torch.command_line:torch_ali_data_dir_to_torch_token_data_dir
+  torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
   torch-token-data-dir-to-ctm = pydrobert.torch.command_line:torch_token_data_dir_to_ctm
+  torch-token-data-dir-to-textgrids = pydrobert.torch.command_line:torch_token_data_dir_to_textgrids
+  torch-token-data-dir-to-torch-ali-data-dir = pydrobert.torch.command_line:torch_token_data_dir_to_torch_ali_data_dir
   torch-token-data-dir-to-trn = pydrobert.torch.command_line:torch_token_data_dir_to_trn
   trn-to-torch-token-data-dir = pydrobert.torch.command_line:trn_to_torch_token_data_dir
-  torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
-  compute-mvn-stats-for-torch-feat-data-dir = pydrobert.torch.command_line:compute_mvn_stats_for_torch_feat_data_dir
 
 [options.packages.find]
 where = src
