added subset-torch-spect-data-dir, test

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ console_scripts =
   compute-torch-token-data-dir-error-rates = pydrobert.torch.command_line:compute_torch_token_data_dir_error_rates
   ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
   get-torch-spect-data-dir-info = pydrobert.torch.command_line:get_torch_spect_data_dir_info
+  subset-torch-spect-data-dir = pydrobert.torch.command_line:subset_torch_spect_data_dir
   textgrids-to-torch-token-data-dir = pydrobert.torch.command_line:textgrids_to_torch_token_data_dir
   torch-ali-data-dir-to-torch-token-data-dir = pydrobert.torch.command_line:torch_ali_data_dir_to_torch_token_data_dir
   torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
