--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ commands =
     compute-torch-token-data-dir-error-rates --help
     ctm-to-torch-token-data-dir --help
     get-torch-spect-data-dir-info --help
+    print-torch-ali-data-dir-length-moments --help
     subset-torch-spect-data-dir --help
     textgrids-to-torch-token-data-dir --help
     torch-ali-data-dir-to-torch-token-data-dir --help
