--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py3{7-t151,8,9,10}
+envlist = py3{7-t151,8,9,10,11}
 isolated_build = True
-; requires =
-;     tox-ltt
+
+[gh]
+python =
+    3.7: py37-t151, py37-t181
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
 [testenv]
 passenv =
