--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: tox --skip-pkg-install -sv
+        run: tox --skip-pkg-install -- -sv
