--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py3{7-t151,8,9,10,11}
+envlist = py3{7,7-t151,7-t181,8,9,10,11}
 isolated_build = True
 
 [gh]
 python =
-    3.7 = py37-t151#, py37-t181
-    3.8 = py38
+    3.7 = py37-t151
+    3.8 = py38-t181
     3.9 = py39
     3.10 = py310
     3.11 = py311
